--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,78 +1,88 @@
-* {
-    padding: 0;
-    margin: 0;
-}
-
 body {
-    background: #131415;
+    background-color: #333;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     height: 100vh;
 }
 
-.clock {
-    background: white;
-    border: 5px solid white;
+/* Cadre de la montre */
+.wrapper {
+    height: 50vh;
+    width: 50vh;
+    background-color: white;
     border-radius: 50%;
-}
-
-.wrap {
-    width: 350px;
-    height: 350px;
     position: relative;
 }
 
-.minute,
-.heure {
-    position: absolute;
-    height: 100px;
-    width: 6px;
-    background: black;
-    margin: auto;
-    top: -27%;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    transform-origin: bottom center;
-    transform: rotate(0deg);
-    box-shadow: 0 0 10px rgba (0, 0, 0, 0.4);
+/* div contenant les aiguilles */
+.hands {
+    height: 100%;
+    width: 100%;
+    position: relative;
 }
 
-.minute {
+/* style par défault de toutes les aiguilles */
+.hands > * {
     position: absolute;
-    height: 130px;
-    width: 4px;
-    top: -38%;
+    top: 50%;
     left: 0;
     right: 0;
-    transform: rotate(90deg);
+    bottom: 0;
+    margin: 0 auto;
+    transform: translateY(-100%);
+    transform-origin: 50% 0%;
+
+    box-shadow: 0 0 1vh rgba(0, 0, 0, 0.5);
 }
 
-.seconde {
-    position: absolute;
-    height: 90px;
-    width: 2px;
-    margin: auto;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    top: -26%;
-    background: #ff4b3e;
-    transform-origin: bottom center;
-    transform: rotate(180deg);
+/* style de chaque aiguille */
+.hands .hours {
+    height: 15vh;
+    width: 2vh;
+    background-color: black;
 }
 
-.point {
-    position: absolute;
-    margin: auto;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 12px;
-    height: 12px;
-    background: white;
-    border: 2px solid #1b1b1b;
+.hands .minutes {
+    height: 20vh;
+    width: 1vh;
+    background-color: black;
+}
+
+.hands .seconds {
+    height: 20vh;
+    width: 0.5vh;
+    background-color: red;
+    box-shadow: 0 0 1vh rgba(255, 0, 0, 0.5);
+}
+
+.button {
+    height: 3vh;
+    width: 3vh;
+    background-color: black;
     border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    bottom: 0;
+    left: 50%;
+    right: 0;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0 1vh rgba(0, 0, 0, 0.5);
+}
+
+.marker,
+.mainMarker {
+    content: '';
+    background-color: black;
+    height: 1.5vh;
+    width: 0.5vh;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform-origin: 0 25vh;
+}
+
+.mainMarker {
+    height: 5vh;
+    width: 1vh;
 }
